--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -9,7 +9,7 @@ WORKDIR /app
 
 # Copy package files and install dependencies
 COPY package.json pnpm-lock.yaml* ./
-RUN pnpm install
+RUN --mount=type=cache,target=/root/.pnpm-store pnpm install
 
 # Copy prisma schema for initial generation
 COPY prisma ./prisma
